--- a/Blockchain-module/client/package.json
+++ b/Blockchain-module/client/package.json
@@ -13,14 +13,17 @@
     "@types/react-dom": "^17.0.15",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "@types/reactstrap": "^8.7.2",
     "@types/redux": "^3.6.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.2",
     "redux": "^4.1.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
