--- a/Blockchain-module/server/package.json
+++ b/Blockchain-module/server/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/nodemon": "^1.19.1",
     "bcrypt": "^5.0.1",
@@ -25,6 +26,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
