--- a/Blockchain-module/.vscode/settings.json
+++ b/Blockchain-module/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"cSpell.words": [
-		"thuonglai"
+		"thuocbaovethucvat",
+		"thuonglai",
+		"xavien"
 	],
 	"editor.tabSize": 2,
 	"editor.insertSpaces": true
