--- a/Blockchain-module/.vscode/settings.json
+++ b/Blockchain-module/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
 	"cSpell.words": [
+		"giaodich",
+		"gionglua",
+		"lohang",
+		"nhatkydongruong",
+		"thuhoach",
 		"thuocbaovethucvat",
 		"thuonglai",
 		"xavien"
