--- a/Blockchain-module/client/customer/package.json
+++ b/Blockchain-module/client/customer/package.json
@@ -16,12 +16,14 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
