--- a/Blockchain-module/client/admin/package.json
+++ b/Blockchain-module/client/admin/package.json
@@ -18,15 +18,18 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^3.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "sass": "^1.52.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
