--- a/Blockchain-module/client/admin/package.json
+++ b/Blockchain-module/client/admin/package.json
@@ -19,6 +19,7 @@
     "@types/sass": "^1.43.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "jodit-react": "^1.3.10",
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^3.0.0",
     "node-sass": "^7.0.1",
